--- a/git/css/main.css
+++ b/git/css/main.css
@@ -3,8 +3,13 @@
 [ FONT ]*/
 
 @font-face {
-  font-family: PlayfairDisplay-BlackItalic;
-  src: url('../fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.ttf'); 
+  font-family: krona-one;
+  src: url('../fonts/krona-one.regular.ttf');
+}
+
+@font-face {
+  font-family: krona-one;
+  src: url('../fonts/PlayfairDisplay/krona-one.ttf'); 
 }
 
 @font-face {
@@ -200,8 +205,8 @@
 /*//////////////////////////////////////////////////////////////////
 [ L-Text >= 26 ]*/
 .l1-txt1 {
-  font-family: PlayfairDisplay-BlackItalic;
-  font-size: 90px;
+  font-family: krona-one;
+  font-size: 7vw;
   color: #333;
   line-height: 1.1;
 }
@@ -387,22 +392,13 @@
 
   .w-full-xl {width: 100%;}
 
-  /*---------------------------------------------*/
-  .respon1 {
-    width: 60%;
-  }
-
-  /*---------------------------------------------*/
-  .respon2 {
-    width: 40%;
-  }
-
 }
 
 
 /*//////////////////////////////////////////////////////////////////
 [ LG ]*/
 @media (max-width: 992px) {
+  .l1-txt1 { font-size: 9vw;}
   .dis-none-lg {display: none;}
   .m-0-lg {margin: 0;}
   .m-lr-0-lg {margin-left: 0; margin-right: 0;}
@@ -488,10 +484,8 @@
 
   /*---------------------------------------------*/
   .respon3 {
-    font-size: 60px;
-  }
-
-  
+    font-size: 70px;
+  } 
 }
 
 
